CAMEL-18730: camel-report-maven-plugin - Fix import issue (#8731)
## Motivation

After generating the route coverage of the tests, if we launch the maven command `mvn camel-report:route-coverage`, the plugin fails due to an import issue.

## Modifications:

* Remove the bad import and replace it with `List.of`.